--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
     <title>Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/suitcase.png">
 </head>
 
 <body>
@@ -191,16 +192,20 @@
                         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active" data-bs-interval="10000">
-                                    <img src="assets/img/bootstrap-icon.png" class="d-block img-fluid" alt="inside a carousel view, we can see the bootstrap icon">
+                                    <img src="assets/img/bootstrap-icon.png" class="d-block img-fluid"
+                                        alt="inside a carousel view, we can see the bootstrap icon">
                                 </div>
                                 <div class="carousel-item" data-bs-interval="10000">
-                                    <img src="assets/img/html5-icon.png" class="d-block img-fluid" alt="inside a carousel view, we can see the html5 icon">
+                                    <img src="assets/img/html5-icon.png" class="d-block img-fluid"
+                                        alt="inside a carousel view, we can see the html5 icon">
                                 </div>
                                 <div class="carousel-item" data-bs-interval="10000">
-                                    <img src="assets/img/javascript-icon.png" class="d-block img-fluid" alt="inside a carousel view, we can se the javascript icon">
+                                    <img src="assets/img/javascript-icon.png" class="d-block img-fluid"
+                                        alt="inside a carousel view, we can se the javascript icon">
                                 </div>
                                 <div class="carousel-item" data-bs-interval="10000">
-                                    <img src="assets/img/java-icon.png" class="d-block img-fluid" alt="inside a carousel view, we can se the java icon">
+                                    <img src="assets/img/java-icon.png" class="d-block img-fluid"
+                                        alt="inside a carousel view, we can se the java icon">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button"
@@ -237,7 +242,8 @@
 
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
                     <div class="card shadow">
-                        <img src="assets/img/cuppon.PNG" class="card-img-top" alt="inside a card, we can see a webpage called cuppon offering some bed and food">
+                        <img src="assets/img/cuppon.PNG" class="card-img-top"
+                            alt="inside a card, we can see a webpage called cuppon offering some bed and food">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-sm-8">
@@ -270,7 +276,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
                     <div class="card shadow">
-                        <img src="assets/img/landing-page.PNG" class="card-img-top" alt="inside a card, we can see a landing web page about rc cars">
+                        <img src="assets/img/landing-page.PNG" class="card-img-top"
+                            alt="inside a card, we can see a landing web page about rc cars">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-sm-8">
@@ -287,7 +294,8 @@
 
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
                     <div class="card shadow">
-                        <img src="assets/img/minimalistic-photography-page.PNG" class="card-img-top" alt="inside a card, we can see a minimalistic web page about photography">
+                        <img src="assets/img/minimalistic-photography-page.PNG" class="card-img-top"
+                            alt="inside a card, we can see a minimalistic web page about photography">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-sm-8">
@@ -303,7 +311,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
                     <div class="card shadow">
-                        <img src="assets/img/java-mysql.jpeg" class="card-img-top" alt="inside a card we can see an image combinig the java and the mysql brand logos">
+                        <img src="assets/img/java-mysql.jpeg" class="card-img-top"
+                            alt="inside a card we can see an image combinig the java and the mysql brand logos">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-sm-8">
@@ -319,7 +328,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
                     <div class="card shadow">
-                        <img src="assets/img/Yandex_Translate_icon.png" class="card-img-top" alt="inside a card, we can see an image with the yandex translator logo">
+                        <img src="assets/img/Yandex_Translate_icon.png" class="card-img-top"
+                            alt="inside a card, we can see an image with the yandex translator logo">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-sm-8">
