deleted some unnecesary assets

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </nav>
         <!-- navbar section end -->
 
-        <!-- mi name full width section  -->
-        <section id="mi-name-full">
+        <!-- my name full width section  -->
+        <section id="my-name-full">
             <div class="container main-text">
                 <div class="row">
                     <div class="col text-light text-start">
