--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a class="nav-link text-light" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" href="#tecnologies">Tecnologies</a>
+                            <a class="nav-link text-light" href="#tecnologies">Technologies</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" href="#portfolio">Portfolio</a>
@@ -47,7 +47,7 @@
 
         <!-- my name full width section  -->
         <section id="my-name-full">
-            <div class="container main-text">
+            <div class="container main-text" >
                 <div class="row">
                     <div class="col text-light text-start">
                         <p class="text-center" id="main-name">I Am Luis Tobar</p>
@@ -63,7 +63,7 @@
             </div>
         </section>
 
-        <!-- mi name full width end -->
+        <!-- my name full width end -->
     </div>
     <!-- image cover end -->
 
@@ -108,12 +108,12 @@
 
 
     <!-- services section -->
-    <section id="services">
-        <div class="container">
+    <section id="services" >
+        <div class="container" >
             <div class="row">
                 <div class="col-12 text-center">
                     <h1>SERVICES</h1>
-                    <p>Some of my services that i can provide for you</p>
+                    <p class="fs-5">Some of my services that i can provide for you</p>
                 </div>
             </div>
         </div>
@@ -176,8 +176,8 @@
                 <div class="col-12">
 
                     <div class="col-12 text-center">
-                        <h1>TECNOLOGIES</h1>
-                        <p>Common tecnologies that i use on my projects</p>
+                        <h1>TECHNOLOGIES</h1>
+                        <p class="fs-5">Common technologies that i use on my projects</p>
                     </div>
                 </div>
             </div>
@@ -237,7 +237,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <h1>Portfolio</h1>
-                    <p>Some of my works</p>
+                    <p class="fs-5">Some of my works</p>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
