added new projects

--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <p class="fs-1">Hi!</p>
-                    <p class="fs-5">I'm Luis Tobar from Chile, I'm a web designer and developer, one of my great
-                        passions is technology and its impact over the years.
-                        I am big fan of old technology, documentaries about how everything works, games and especially
-                        simracing games.</p>
+                    <p class="fs-5">I'm Luis Tobar from Chile, I'm a web designer and developer, 
+                        one of my great passions is technology and its impact over the years. I am big fan of retro technology, 
+                        documentaries about how everything works and simracing games.</p>
                 </div>
 
                 <div class="col-lg-6 col-md-6 col-sm-12 p-3 text-center">
@@ -264,7 +263,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-sm-8">
-                                    <h5 class="card-title text-primary fw-bold text-center">Iguana page page</h5>
+                                    <h5 class="card-title text-primary fw-bold text-center">Iguana page</h5>
                                 </div>
                                 <div class="col-sm-4 text-center">
                                     <a href="https://sherydan.github.io/Iguana-Page/" target="_blank"
@@ -337,6 +336,78 @@
                                 </div>
                                 <div class="col-sm-4 text-center">
                                     <a href="https://github.com/Sherydan/Traductor-API-Yandex" target="_blank"
+                                        class="btn btn-primary text-white" type="button">Go to</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
+                    <div class="card shadow">
+                        <img src="assets/img/flexbox-chatpage.PNG" class="card-img-top"
+                            alt="inside a card, we can see an image with the yandex translator logo">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-sm-8">
+                                    <h5 class="card-title text-primary fw-bold text-center">Flexbox chat page</h5>
+                                </div>
+                                <div class="col-sm-4 text-center">
+                                    <a href="https://sherydan.github.io/desafio-flexbox/" target="_blank"
+                                        class="btn btn-primary text-white" type="button">Go to</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
+                    <div class="card shadow">
+                        <img src="assets/img/gridcss-ecommerce.PNG" class="card-img-top"
+                            alt="inside a card, we can see an image with the yandex translator logo">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-sm-8">
+                                    <h5 class="card-title text-primary fw-bold text-center">Ecommerce using Grid</h5>
+                                </div>
+                                <div class="col-sm-4 text-center">
+                                    <a href="https://sherydan.github.io/desafio-grid-css/" target="_blank"
+                                        class="btn btn-primary text-white" type="button">Go to</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
+                    <div class="card shadow">
+                        <img src="assets/img/Cars-media-query.PNG" class="card-img-top"
+                            alt="inside a card, we can see an image with the yandex translator logo">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-sm-8">
+                                    <h5 class="card-title text-primary fw-bold text-center">Media query's</h5>
+                                </div>
+                                <div class="col-sm-4 text-center">
+                                    <a href="https://sherydan.github.io/media-query/" target="_blank"
+                                        class="btn btn-primary text-white" type="button">Go to</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-1 offset-lg-4">
+                    <div class="card shadow">
+                        <img src="assets/img/sass-card.PNG" class="card-img-top"
+                            alt="inside a card, we can see an image with the yandex translator logo">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-sm-8">
+                                    <h5 class="card-title text-primary fw-bold text-center">Custom Bootstrap card</h5>
+                                </div>
+                                <div class="col-sm-4 text-center">
+                                    <a href="https://sherydan.github.io/desafio-sass/" target="_blank"
                                         class="btn btn-primary text-white" type="button">Go to</a>
                                 </div>
                             </div>
