--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <!-- my name full width section  -->
         <section id="my-name-full">
-            <div class="container main-text" >
+            <div class="container main-text">
                 <div class="row">
                     <div class="col text-light text-start">
                         <p class="text-center" id="main-name">I Am Luis Tobar</p>
@@ -74,8 +74,9 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <p class="fs-1">Hi!</p>
-                    <p class="fs-5">I'm Luis Tobar from Chile, I'm a web designer and developer, 
-                        one of my great passions is technology and its impact over the years. I am big fan of retro technology, 
+                    <p class="fs-5">I'm Luis Tobar from Chile, I'm a web designer and developer,
+                        one of my great passions is technology and its impact over the years. I am big fan of retro
+                        technology,
                         documentaries about how everything works and simracing games.</p>
                 </div>
 
@@ -107,8 +108,8 @@
 
 
     <!-- services section -->
-    <section id="services" >
-        <div class="container" >
+    <section id="services">
+        <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
                     <h1>SERVICES</h1>
@@ -425,31 +426,35 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1>Let's get in touch!</h1>
-                    <!-- contact form -->
-                    <form>
-                        <div class="form-group mb-4">
-                            <label class="mb-2">Name</label>
-                            <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Name"
-                                required>
-                        </div>
+                    <div class="contact-form shadow">
+                        <h1>Let's get in touch!</h1>
+                        <!-- contact form -->
+                        <form onsubmit="sendMail(); reset(); return false;">
+                            <div class="form-group mb-4">
+                                <label class="mb-2">Name</label>
+                                <input type="text" class="form-control" id="name" aria-describedby="name"
+                                    placeholder="Name" required>
+                            </div>
 
-                        <div class="form-group mb-4">
-                            <label class="mb-2">E-mail</label>
-                            <input type="email" class="form-control" id="email" placeholder="E-mail" required>
-                        </div>
+                            <div class="form-group mb-4">
+                                <label class="mb-2">E-mail</label>
+                                <input type="email" class="form-control" id="email" placeholder="E-mail" required>
+                            </div>
 
 
-                        <div class="form-group">
-                            <label class="mb-2">Message</label>
-                            <textarea class="form-control" placeholder="Message" required></textarea>
-                        </div>
+                            <div class="form-group">
+                                <label class="mb-2">Message</label>
+                                <textarea class="form-control" id="message" placeholder="Message" required></textarea>
+                            </div>
 
-                        <div class="my-3 text-center">
-                            <button type="submit" class="btn btn-info btn-lg text-light">Send</button>
-                        </div>
-                    </form>
-                    <!-- end contact form -->
+                            <div class="my-3 text-center">
+                                <button type="submit" class="btn btn-info btn-lg text-light">Send</button>
+                            </div>
+                        </form>
+                        <!-- end contact form -->
+
+                    </div>
+
 
 
                 </div>
@@ -475,6 +480,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/91419d5d9e.js" crossorigin="anonymous"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 
 </html>
