--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" href="#portfolio">Portfolio</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="https://drive.google.com/file/d/1eRYSlfISg5JGCJNwJC3VEkJhfD0D7TrF/view" target="_blank" rel="noopener noreferrer">CV</a>
+                        </li>
                     </ul>
                 </div>
             </div>
