added recent works to my portfolio

--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-sm-12 mb-1 offset-lg-4">
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
                     <div class="card shadow">
                         <img src="assets/img/sass-card.PNG" class="card-img-top"
                             alt="inside a card, we can see an image with the yandex translator logo">
@@ -520,6 +520,202 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
+                    <div class="card shadow">
+                        <img src="assets/img/bsale-backend.PNG" class="card-img-top"
+                            alt="inside a card, we can see an image with the yandex translator logo">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col">
+                                    <h5 class="card-title text-primary fw-bold text-center">Desafio Bsale Backend</h5>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="details">
+                            <ul class="social-icons">
+                                <li>
+                                    <a href="https://github.com/Sherydan/desafio-bsale-backend" target="_blank"
+                                        class="btn btn-primary text-white btn-lg" type="button">View</a>
+                                </li>
+                                <li>
+                                    <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" title="REST API for a job application at BSALE">
+                                        Info
+                                      </button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
+                    <div class="card shadow">
+                        <img src="assets/img/bsale-frontend.PNG" class="card-img-top"
+                            alt="inside a card, we can see an image with the yandex translator logo">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col">
+                                    <h5 class="card-title text-primary fw-bold text-center">Desafio Bsale Frontend</h5>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="details">
+                            <ul class="social-icons">
+                                <li>
+                                    <a href="https://github.com/Sherydan/desafio-bsale-frontend" target="_blank"
+                                        class="btn btn-primary text-white btn-lg" type="button">View</a>
+                                </li>
+                                <li>
+                                    <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" title="Webpage for a job applicattion at BSALE">
+                                        Info
+                                      </button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
+                    <div class="card shadow">
+                        <img src="assets/img/todo-list.PNG" class="card-img-top"
+                            alt="inside a card, we can see an image with the yandex translator logo">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col">
+                                    <h5 class="card-title text-primary fw-bold text-center">Todo List</h5>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="details">
+                            <ul class="social-icons">
+                                <li>
+                                    <a href="https://github.com/Sherydan/todo-list" target="_blank"
+                                        class="btn btn-primary text-white btn-lg" type="button">View</a>
+                                </li>
+                                <li>
+                                    <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" title="Todo list using my Javascript Knowledge">
+                                        Info
+                                      </button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
+                    <div class="card shadow">
+                        <img src="assets/img/api-fetch-currency-converter.PNG" class="card-img-top"
+                            alt="inside a card, we can see an image with the yandex translator logo">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col">
+                                    <h5 class="card-title text-primary fw-bold text-center">Currency converter</h5>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="details">
+                            <ul class="social-icons">
+                                <li>
+                                    <a href="https://github.com/Sherydan/api-fetch-currency-converter" target="_blank"
+                                        class="btn btn-primary text-white btn-lg" type="button">View</a>
+                                </li>
+                                <li>
+                                    <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" title="Currency converter using Mindicador API and fetch method">
+                                        Info
+                                      </button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
+                    <div class="card shadow">
+                        <img src="assets/img/react-news-page.PNG" class="card-img-top"
+                            alt="inside a card, we can see an image with the yandex translator logo">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col">
+                                    <h5 class="card-title text-primary fw-bold text-center">News Page using React and Rapid API</h5>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="details">
+                            <ul class="social-icons">
+                                <li>
+                                    <a href="https://github.com/Sherydan/react-api" target="_blank"
+                                        class="btn btn-primary text-white btn-lg" type="button">View</a>
+                                </li>
+                                <li>
+                                    <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" title="News Page using React and Rapid API">
+                                        Info
+                                      </button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
+                    <div class="card shadow">
+                        <img src="assets/img/natural-pic-react-context.PNG" class="card-img-top"
+                            alt="inside a card, we can see an image with the yandex translator logo">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col">
+                                    <h5 class="card-title text-primary fw-bold text-center">Iamge gallery using React Context</h5>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="details">
+                            <ul class="social-icons">
+                                <li>
+                                    <a href="https://github.com/Sherydan/react-context-image-gallery" target="_blank"
+                                        class="btn btn-primary text-white btn-lg" type="button">View</a>
+                                </li>
+                                <li>
+                                    <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" title="Image gallery using react context, you can like and delete fav pics">
+                                        Info
+                                      </button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-1">
+                    <div class="card shadow">
+                        <img src="assets/img/react-poke-api.PNG" class="card-img-top"
+                            alt="inside a card, we can see an image with the yandex translator logo">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col">
+                                    <h5 class="card-title text-primary fw-bold text-center">Poke API call using React</h5>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="details">
+                            <ul class="social-icons">
+                                <li>
+                                    <a href="https://github.com/Sherydan/react-routerii-pokeapi" target="_blank"
+                                        class="btn btn-primary text-white btn-lg" type="button">View</a>
+                                </li>
+                                <li>
+                                    <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" title="Webpage that uses the pokeapi to show image and stats for pokemons">
+                                        Info
+                                      </button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                
             </div>
         </div>
     </section>
